[package]
name = "rust-random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "strings"
path = "src/strings.rs"

[[bin]]
name = "iterator"
path = "src/iterator.rs"

[[bin]]
name = "strings2"
path = "src/strings2.rs"

[[bin]]
name = "regex_examples"
path = "src/regex_examples.rs"

[[bin]]
name = "vectors"
path = "src/vectors.rs"

[dependencies]
regex = "1.8.4"
